[package]
name = "colmi-ring-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
btleplug = { version = "0.11.7" }
uuid = "1.13.2"
tokio = { version = "1.42.1", features = ["default", "sync", "rt"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
zerocopy = {version = "0.8.24", features = ["derive"]}
futures-core = "0.3.31"